--- a/src/com/houarizegai/gestioncommercial/resources/views/forms/client/AddClient.fxml
+++ b/src/com/houarizegai/gestioncommercial/resources/views/forms/client/AddClient.fxml
@@ -48,7 +48,7 @@
       </HBox>
       <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
          <children>
-            <JFXButton onAction="#onAdd" text="Ajouter">
+            <JFXButton onAction="#onAdd" text="Enregistrer">
                <styleClass>
                   <String fx:value="btn" />
                   <String fx:value="btn-add" />
