--- a/src/com/houarizegai/gestioncommercial/resources/css/crud-forms.css
+++ b/src/com/houarizegai/gestioncommercial/resources/css/crud-forms.css
@@ -9,11 +9,15 @@
     -fx-text-fill: linear-gradient(from 0 0 to 100px 100px, #0f9d58, #5a5a5a)
 }
 
+.icon-error { /* Triangle Font Awesome */
+    -fx-fill: #D00;
+}
+
 .field {
     -jfx-label-float: true;
     -fx-font-size: 16px;
     -jfx-focus-color: #0f9d58;
-    -jfx-unfocus-color: #800;
+    -jfx-unfocus-color: #777;
     -fx-prompt-text-fill: #777;
 }
 
