--- a/src/com/houarizegai/gestioncommercial/resources/views/Home.fxml
+++ b/src/com/houarizegai/gestioncommercial/resources/views/Home.fxml
@@ -35,11 +35,11 @@
                <children>
                   <ImageView fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/home/cards/client.png" />
+                        <Image url="@../images/icons/client.png" />
                      </image>
                   </ImageView>
                   <Label styleClass="cards-title" text="Client" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cards-desc" text="This is just description of client" wrappingWidth="150.953125" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cards-desc" text="Tu peut ajouter, modifier ou/et supprimer" wrappingWidth="158.953125" />
                </children>
             </VBox>
             <VBox alignment="CENTER" maxHeight="-Infinity" prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="cards">
@@ -57,7 +57,7 @@
                <children>
                   <ImageView fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/home/cards/client.png" />
+                        <Image url="@../images/icons/produit.png" />
                      </image>
                   </ImageView>
                   <Label styleClass="cards-title" text="Produit" />
@@ -68,10 +68,10 @@
                <children>
                   <ImageView fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/home/cards/client.png" />
+                        <Image url="@../images/icons/stock.png" />
                      </image>
                   </ImageView>
-                  <Label styleClass="cards-title" text="Client" />
+                  <Label styleClass="cards-title" text="Stock" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cards-desc" text="This is just description of client" wrappingWidth="150.953125" />
                </children>
             </VBox>
@@ -79,10 +79,10 @@
                <children>
                   <ImageView fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/home/cards/client.png" />
+                        <Image url="@../images/preloader.gif" />
                      </image>
                   </ImageView>
-                  <Label styleClass="cards-title" text="Client" />
+                  <Label styleClass="cards-title" text="Unknown" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="cards-desc" text="This is just description of client" wrappingWidth="150.953125" />
                </children>
             </VBox>
