initalize table product by columns & complet choose fournisseur action in Facture Fournisseur

--- a/src/com/houarizegai/gestioncommercial/resources/views/FactureFournisseur.fxml
+++ b/src/com/houarizegai/gestioncommercial/resources/views/FactureFournisseur.fxml
@@ -84,7 +84,7 @@
             </StackPane>
             <HBox spacing="10.0" VBox.vgrow="ALWAYS">
                <children>
-                  <JFXTreeTableView prefHeight="220.0" HBox.hgrow="ALWAYS" />
+                  <JFXTreeTableView fx:id="tableProduit" prefHeight="220.0" HBox.hgrow="ALWAYS" />
                   <VBox spacing="10.0">
                      <children>
                         <JFXButton onAction="#onAdd" text="Nouveau">
