--- a/src/com/houarizegai/gestioncommercial/resources/views/FactureFournisseur.fxml
+++ b/src/com/houarizegai/gestioncommercial/resources/views/FactureFournisseur.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
@@ -122,20 +123,24 @@
             </HBox>
             <StackPane>
                <children>
-                  <VBox maxWidth="-Infinity" spacing="10.0" styleClass="cards" StackPane.alignment="TOP_LEFT">
+                  <VBox alignment="CENTER_LEFT" maxWidth="-Infinity" spacing="10.0" styleClass="cards" StackPane.alignment="TOP_LEFT">
                      <children>
-                        <StackPane>
+                        <GridPane hgap="10.0" vgap="10.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
                            <children>
-                              <Label styleClass="sub-title" text="Mode Payement" StackPane.alignment="CENTER_LEFT" />
-                              <FontAwesomeIconView glyphName="EDIT" onMouseClicked="#onChoosePaymentMode" size="25" styleClass="icon" StackPane.alignment="CENTER_RIGHT" />
+                              <Label styleClass="lbl" text="Mode Reglement :" />
+                              <JFXComboBox fx:id="comboModeReg" maxWidth="1.7976931348623157E308" styleClass="field" GridPane.columnIndex="1" />
+                              <Label styleClass="lbl" text="N° :" GridPane.rowIndex="1" />
+                              <JFXTextField fx:id="fieldNumModePayement" styleClass="field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            </children>
-                        </StackPane>
-                        <HBox alignment="CENTER_LEFT" spacing="5.0">
-                           <children>
-                              <Label styleClass="lbl" text="N° :" />
-                              <JFXTextField fx:id="fieldNumModePayement" styleClass="field" />
-                           </children>
-                        </HBox>
+                        </GridPane>
                      </children>
                   </VBox>
                   <VBox maxWidth="-Infinity" spacing="10.0" styleClass="cards" StackPane.alignment="TOP_RIGHT">
