--- a/GestionCommercial-Desktop/src/com/houarizegai/gestioncommercial/resources/css/facture.css
+++ b/GestionCommercial-Desktop/src/com/houarizegai/gestioncommercial/resources/css/facture.css
@@ -9,7 +9,7 @@
 }
 
 .cards {
-    -fx-padding: 10px 20px;
+    -fx-padding: 10px 20px 20px 20px;
     -fx-background-color: #FFF;
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 6, 0, 0, 0);
     -fx-background-radius: 5
