--- a/GestionCommercial-Desktop/src/com/houarizegai/gestioncommercial/resources/css/system.css
+++ b/GestionCommercial-Desktop/src/com/houarizegai/gestioncommercial/resources/css/system.css
@@ -7,6 +7,11 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 6, 0, 0, 0);
 }
 
+.icon-nav:hover {
+    -fx-fill: linear-gradient(from 0 0 to 50% 100%, #2196f3, #333);
+    -fx-cursor: hand;
+}
+
 JFXHamburger {
     -fx-cursor: hand;
 }
