--- a/GestionCommercial-Android/app/src/main/res/values/styles.xml
+++ b/GestionCommercial-Android/app/src/main/res/values/styles.xml
@@ -7,6 +7,16 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="InputStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -21,5 +31,7 @@
         <item name="android:fontFamily">tahoma</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textAppearance"></item>
     </style>
+
 </resources>
